tests/init/neg/some-this.scala
class X:
  val some = Some(this) // error